# nrf-haptics

./: CMakeLists.txt  README.md  app.overlay  prj.conf
src/: main.c
